<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Expense Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="write_database">Write to Database</string>
    <string name="write_expences">Custom Expenses</string>
    <string name="expence_dailyreport">Daily Report</string>
    <string name="expence_monthlyreport">Monthly Report</string>
    <string name="expence_deleteexpences">Delete Custom Expenses</string>
    <string name="expence_pref">Preference</string>
    <string name="expence_about">About</string>
    <string name="title_activity_expense_preference">Expense Preference</string>
    <string name="preference_card">Expense from Card</string>
    <string name="preference_atm">Number</string>
    <string name="preference_save">Save</string>
    <string name="preference_radio_BankSMSContact">Bank SMS/Alert Contact Number </string>
    <string name="preference_radio_BankACOrCarddigits">Last XXXX digit Ac/Card Number</string>
    <string name="preference_deleteall">Delete All</string>
    <string name="preference_syncall">Sync All</string>
    <string name="title_activity_custom_expenses">Custom Expenses</string>
    <string name="title_activity_daily_report">Today Report</string>
    <string name="todays_report">Today Expense Report</string>
    <string name="month_report">This month Report</string>
    <string name="title_activity_about">About ExpenseTracker</string>
    <string name="title_activity_monthly_report">Monthly Report</string>
	<string name="custom_expense_title">Custom Expense</string>
	<string name="custom_expense_selectdate">Date (DD-MM-YYYY)</string>
	<string name="custom_expense_buttondate">Change Date</string>
	<string name="custom_expense_expensename">Expense Name</string>
	<string name="custom_expense_amount">Amount</string>
	<string name="custom_expense_type">Expense Type</string>
	<string name="temp_text">text</string>
	<string name="custom_expense_Choosetype">Choose a Expense Type</string>
    <string-array name="expense_arrays">
        <item>House</item>
        <item>Shopping</item>
        <item>Entertainment</item>
        <item>Personal</item>
        <item>Transport</item>
        <item>Investments</item>
        <item>Food</item>
        <item>Dependent</item>
        <item>Gifts</item>
		<item>Loans</item>
		<item>Other</item>
    </string-array>
</resources>
