<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/Button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Button4"
        android:layout_below="@+id/changeDate"
        android:drawableLeft="@drawable/dailyreport"
        android:onClick="DailyReport"
        android:text="@string/expence_dailyreport" />

    <Button
        android:id="@+id/Button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Button2"
        android:layout_below="@+id/Button2"
        android:drawableLeft="@drawable/monthlyreport"
        android:onClick="MonthlyReport"
        android:text="@string/expence_monthlyreport"
        android:textAlignment="center" />

    <Button
        android:id="@+id/changeDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Button2"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/expences"
        android:onClick="WriteExpensetoDatabase"
        android:text="@string/write_expences"
        android:textAlignment="center" />

    <Button
        android:id="@+id/Button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/Button3"
        android:drawableLeft="@drawable/delete"
        android:onClick="DeleteReports"
        android:text="@string/expence_deleteexpences" />

    <Button
        android:id="@+id/Button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Button4"
        android:drawableLeft="@drawable/about"
        android:onClick="AboutUs"
        android:text="@string/expence_about" />

    <Button
        android:id="@+id/Button01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Button5"
        android:layout_below="@+id/Button5"
        android:drawableLeft="@drawable/settings"
        android:onClick="PreferenceClick"
        android:text="@string/expence_pref" />

</RelativeLayout>