<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CustomExpensesActivity" >
 

    <TextView
        android:id="@+id/textViewcustomExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/custom_expense_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewcustomExpense"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="22dp"
        android:text="@string/custom_expense_selectdate" />

    <TextView
        android:id="@+id/Output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_marginLeft="21dp"
        android:layout_toRightOf="@+id/textView1"
        android:text="@string/temp_text" />

    <Button
        android:id="@+id/buttonchangeDate"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/custom_expense_buttondate" />

    <TextView
        android:id="@+id/textViewExpenseType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignTop="@+id/spinnerExpenseType"
        android:layout_marginTop="15dp"
        android:text="@string/custom_expense_type" />

    <EditText
        android:id="@+id/editTextCustomExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/editTextAmount"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <Spinner
        android:id="@+id/spinnerExpenseType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextCustomExpense"
        android:layout_below="@+id/buttonchangeDate"
        android:entries="@array/expense_arrays"
        android:layout_marginTop="14dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editTextAmount"
        android:layout_below="@+id/editTextAmount"
        android:layout_marginTop="35dp"
        android:onClick="saveCustomExpenses"
        android:text="@string/preference_save" />

    <TextView
        android:id="@+id/textViewAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextAmount"
        android:layout_alignLeft="@+id/textView2"
        android:text="@string/custom_expense_amount" />

    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/buttonchangeDate"
        android:layout_below="@+id/editTextCustomExpense"
        android:layout_marginTop="26dp"
        android:layout_toRightOf="@+id/textView2"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/spinnerExpenseType"
        android:layout_marginTop="28dp"
        android:text="@string/custom_expense_expensename" />

</RelativeLayout>
